# call-haskell-from-anything

./: .travis.yml  CHANGELOG.md  Makefile  README.md  call-haskell-from-anything.cabal  configure  detect-ghc-buildinfo.py  php-build-mffi.sh  pyhaskell.cabal  stack.yaml  test.php  test.py  test.rb
src/FFI/: Python.hs
src/FFI/Anything/: Copied.hs  TH.hs  TypeUncurry.hs  Util.hs
src/FFI/Anything/TypeUncurry/: DataKinds.hs  Legacy.hs  Msgpack.hs  ReturnResult.hs
src/FFI/Python/: Copied.hs  TH.hs  TypeUncurry.hs  TypeUncurryDataKinds.hs  TypeUncurryLegacy.hs  TypeUncurryMsgpack.hs  Util.hs
test/: Test1.hs
