name:          call-haskell-from-anything
version:       1.1.0.0
license:       MIT
author:        Niklas Hambüchen (mail@nh2.me)
maintainer:    Niklas Hambüchen (mail@nh2.me)
category:      Network
build-type:    Simple
synopsis:      Call Haskell functions from other languages via serialization and dynamic libraries
description:   FFI via serialisation. See https://github.com/nh2/call-haskell-from-anything for details.
stability:     experimental
tested-with:   GHC==8.0.2
cabal-version: >= 1.10
homepage:      https://github.com/nh2/call-haskell-from-anything
bug-reports:   https://github.com/nh2/call-haskell-from-anything/issues


source-repository head
  type: git
  location: git://github.com/nh2/call-haskell-from-anything.git


library
  default-language: Haskell2010
  hs-source-dirs:
    src
  exposed-modules:
    FFI.Anything.TH
    FFI.Anything.TypeUncurry
    FFI.Anything.TypeUncurry.Msgpack
    FFI.Anything.TypeUncurry.DataKinds
  build-depends:
      base >= 4.8 && < 5
    , bytestring >= 0.10.0.0
    , data-msgpack >= 0.0.10
    , storable-endian >= 0.2.6
    , template-haskell >= 2.11.0
    , mtl >= 2.1.2
  ghc-options:
    -Wall -fwarn-unused-imports


foreign-library call-haskell-from-anything
  type: native-shared
  default-language: Haskell2010
  hs-source-dirs:
    test
  other-modules:
    Test1
  build-depends:
      call-haskell-from-anything

    -- Packages that already have version bounds in the library:
    , base
    , bytestring
    , data-msgpack
    , mtl
