name:          pyhaskell
version:       0.1
license:       MIT
author:        Niklas Hambüchen (mail@nh2.me)
maintainer:    Niklas Hambüchen (mail@nh2.me)
category:      Network
build-type:    Simple
License:       MIT
synopsis:      Python-to-Haskell function calls
stability:     experimental
tested-With:   GHC==7.4.2
cabal-version: >= 1.10
homepage:      https://github.com/nh2/pyhaskell
bug-Reports:   https://github.com/nh2/pyhaskell/issues


source-repository head
  type: git
  location: git://github.com/nh2/pyhaskell.git


library
  default-language: Haskell2010
  hs-source-dirs:
    src
  exposed-modules:
      FFI.Python.TH
    , FFI.Python.MsgPackParamList
    , FFI.Python.Copied
  build-depends:
      base >= 4 && < 5
    , bytestring >= 0.9.2.1
    , msgpack >= 0.7.1.5
    , blaze-builder >= 0.3.1.0
    , template-haskell
    , mtl >= 2.1.2
    , attoparsec >= 0.10.3.0
  ghc-options:
    -Wall -fwarn-unused-imports


executable pyhaskell.so
  default-language: Haskell2010
  hs-source-dirs:
    test
  main-is:
    Test1.hs
  build-depends:
      base >= 4 && <= 5
    , pyhaskell
    , bytestring >= 0.9.2.1
    , msgpack >= 0.7.1.5
    , blaze-builder >= 0.3.1.0
    , template-haskell
    , mtl >= 2.1.2
    , attoparsec >= 0.10.3.0
  ghc-options:
  -- For building TemplateHaskell with cabal and -dynamic, we have to disable -dynamic sometimes
    -no-hs-main -fPIC -shared -dynamic
  --  -no-hs-main
  -- TODO remove hardcoded path
  ld-options: -shared /home/niklas/opt/haskell-7.4/lib/ghc-7.4.2/libHSrts-ghc7.4.2.so
