name:          pyhaskell
version:       0.1
license:       MIT
author:        Niklas Hambüchen (mail@nh2.me)
maintainer:    Niklas Hambüchen (mail@nh2.me)
category:      Network
build-type:    Simple
License:       MIT
synopsis:      Python-to-Haskell function calls
stability:     experimental
tested-With:   GHC==7.4.2
cabal-version: >= 1.10
homepage:      https://github.com/nh2/pyhaskell
bug-Reports:   https://github.com/nh2/pyhaskell/issues


source-repository head
  type: git
  location: git://github.com/nh2/pyhaskell.git


library
  default-language: Haskell2010
  hs-source-dirs:
    src, test
  exposed-modules:
    FFI.Python.TH
    FFI.Python.Copied
    FFI.Python.TypeUncurryLegacy
    FFI.Python.TypeUncurryMsgpack
  if impl(ghc >= 7.6.0)
    exposed-modules:
      FFI.Python.TypeUncurry
  other-modules:
    FFI.Python.Util
    Test1
  build-depends:
      base >= 4 && < 5
    , bytestring >= 0.9.2.1
    , msgpack >= 0.7.1.5
    , blaze-builder >= 0.3.1.0
    , template-haskell
    , mtl >= 2.1.2
    , attoparsec >= 0.10.3.0
  ghc-options:
    -Wall -fwarn-unused-imports


